--- a/views/about.html
+++ b/views/about.html
@@ -1,6 +1,6 @@
 <section class="about-main">
     <div class="about-image">
-        <img src="../img/About-img.jpg" alt="About Page Image">
+        <img src="./img/About-img.jpg" alt="About Page Image">
     </div>
 
 
@@ -8,7 +8,7 @@
 
     <section class="about-inner-intro">
         <h1>WE ARE A GROUP OF <em style="color:#12F0F0">ADVENTURERS</em></h1>
-        <p>Maecenas rhoncus elit et mattis placerat. In aliquam eu velit gravida vulputate. Cras facilisis augue quis velit ultrices luctus. Duis eu turpis massa. Morbi iaculis porttitor feugiat. Suspendisse sit amet metus vulputate, fermentum sapien et, mollis massa. Quisque condimentum nunc vel nisl pellentesque, nec dapibus urna pulvinar. Nulla ac nisl arcu. Integer tincidunt mauris sed libero malesuada consequat. Vestibulum sodales lacus ornare, lobortis metus quis, laoreet eros. Duis tristique ligula sit amet malesuada accumsan. Nunc et metus maximus, faucibus magna quis, accumsan arcu. Nullam eleifend pretium vestibulum. Suspendisse nec diam lacus. Aliquam consequat tincidunt risus, et rutrum risus vehicula at.</p>
+        <p>Out to have a good time. Anything goes. There are no rules. Clothes are always optional. In ancient times it was rude to have less than 10 lovers. We have adopted that same lifestyle without the risk of sexually transmitted disease. All applicants will be screened six months to booking so that everyone can be sure they can bang whoever without any concecquences. Quisque condimentum nunc vel nisl pellentesque, nec dapibus urna pulvinar. Nulla ac nisl arcu. Integer tincidunt mauris sed libero malesuada consequat. Vestibulum sodales lacus ornare, lobortis metus quis, laoreet eros. Duis tristique ligula sit amet malesuada accumsan. Nunc et metus maximus, faucibus magna quis, accumsan arcu. Nullam eleifend pretium vestibulum. Suspendisse nec diam lacus. Aliquam consequat tincidunt risus, et rutrum risus vehicula at.</p>
 
         <!--You will need to add a ui-sref here that points the adventurers state-->
 
