--- a/views/contact.html
+++ b/views/contact.html
@@ -2,8 +2,8 @@
 
 <section class="contact-container">
     <h1>Stay in touch</h1>
-    <p>555-555-5555</p>
-    <p>travellikeaboss@somewhere.com</p>
+    <p>800-169-4SEX</p>
+    <p>findahookeranywhere@youknowyouwantit.com</p>
     <p>817 N Boss Lane <br>
         The Best Place, UT <br>
         84000</p>
